--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,30 +1,27 @@
-@import './reset.scss';
-@import './animate.scss';
-@import './aos.scss';
-@import './variableDefault.scss';
-@import './variableColor.scss';
-@import './form.scss';
-@import './dialog.scss';
-@import './fonts.scss';
-@import './customClass.scss';
-@import './slide.scss';
-@import './swiper.scss'; // vue awesome swiper
-@import './mapBg.scss';
-
+@import "./reset.scss";
+@import "./animate.scss";
+@import "./aos.scss";
+@import "./variableDefault.scss";
+@import "./variableColor.scss";
+@import "./form.scss";
+@import "./dialog.scss";
+@import "./fonts.scss";
+@import "./customClass.scss";
+@import "./slide.scss";
+@import "./swiper.scss"; // vue awesome swiper
+@import "./mapBg.scss";
 html,
 body {
     overflow-x: hidden;
-  //  font-family: $family2;
+    //  font-family: $family2;
     *::-webkit-scrollbar {
         // display: none;
     }
-
     * {
         // font-family:$family1;
         outline: none !important;
     }
-
-    ::selection {
+     ::selection {
         background-color: $selection_color;
         color: #fff;
     }
@@ -40,17 +37,15 @@ body {
 
 .home {
     background: $bg;
-//    font-family: $family2;
+    //    font-family: $family2;
     padding-top: $nav_pc_height;
     background-size: auto;
-  //  background-position: top;
-    background-repeat:repeat;
+    //  background-position: top;
+    background-repeat: repeat;
     background-attachment: fixed;
     overflow: hidden; //試底下多的那塊哪來的
-
     &.no-padding-top {
         padding-top: 0;
-
         .fullscreen {
             height: 100vh;
         }
@@ -62,7 +57,6 @@ body {
     height: calc(100vh - #{$nav_pc_height});
     position: relative;
     overflow: hidden;
-
     // 從高度去調整比例，同步調整寬度，求與設計稿比例符合。留白沒關係
     .fullscreen-container {
         width: calc((100vh - #{$nav_pc_height}) * (1440 / 900));
@@ -147,9 +141,11 @@ body {
 .hidden-pc {
     display: none !important;
 }
+
 .hidden-tablet {
     display: block;
 }
+
 .hidden-mobile {
     display: block;
 }
@@ -159,6 +155,7 @@ body {
         height: auto;
     }
 }
+
 @media only screen and (min-width: 1441px) {
     .layout-container {
         width: 1368px;
@@ -166,6 +163,7 @@ body {
         margin-right: auto !important;
     }
 }
+
 @media only screen and (max-width: 1440px) and (min-width: 1200px) {
     .layout-container {
         width: 1141px;
@@ -190,7 +188,9 @@ body {
     }
 }
 
+
 /* img optimize*/
+
 img {
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
@@ -199,18 +199,21 @@ img {
     -ms-interpolation-mode: nearest-neighbor;
 }
 
+
 /* lazy load */
-img[lazy='loading'] {
+
+img[lazy="loading"] {
     opacity: 0;
     transition: opacity 1s;
 }
-img[lazy='error'] {
+
+img[lazy="error"] {
     /*your style here*/
     opacity: 0;
     transition: opacity 1s;
 }
 
-img[lazy='loaded'] {
+img[lazy="loaded"] {
     /*your style here*/
     opacity: 1;
     transition: opacity 1s;
@@ -220,14 +223,17 @@ img[lazy='loaded'] {
     transition: opacity 1s;
     opacity: 0;
 }
-.lazy-bg[lazy='loading'] {
+
+.lazy-bg[lazy="loading"] {
     opacity: 0;
 }
-.lazy-bg[lazy='error'] {
+
+.lazy-bg[lazy="error"] {
     /*your style here*/
     opacity: 0;
 }
-.lazy-bg[lazy='loaded'] {
+
+.lazy-bg[lazy="loaded"] {
     opacity: 1;
 }
 
@@ -235,87 +241,74 @@ img[lazy='loaded'] {
     display: flex;
 }
 
+
 /* 螢幕尺寸標準 */
+
+
 /* 平板尺寸 */
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
     .home.no-padding-top {
         padding-top: 0;
-
         .fullscreen {
             height: 100vh;
         }
     }
     .fullscreen {
         height: calc(100vh - #{$nav_tablet_height});
-
         .fullscreen-container {
             width: calc((100vh - #{$nav_tablet_height}) * (1440 / 900));
             height: calc(100vh - #{$nav_tablet_height});
             margin: 0 auto;
         }
     }
-
     .home {
         padding-top: $nav_tablet_height;
         background-color: $order_bg_color;
-        background-image: $order_bg_image;
+        // background-image: $order_bg_image;
         background-repeat: no-repeat;
         background-size: 100vw auto;
         background-position: 0% 50%;
-
         &.no-padding-top {
             padding-top: 0;
         }
     }
-
     .col-tablet-1 {
         width: 100%;
     }
-
     .col-tablet-2 {
         width: 50%;
     }
-
     .col-tablet-3 {
         width: 25%;
     }
-
     .col-tablet-4 {
         width: 33.33%;
     }
-
     .col-tablet-5 {
         width: calc(100% * (5 / 12));
     }
-
     .col-tablet-6 {
         width: 50%;
     }
-
     .col-tablet-7 {
         width: calc(100% * (7 / 12));
     }
-
     .col-tablet-8 {
         width: calc(100% * (8 / 12));
     }
-
     .col-tablet-9 {
         width: calc(100% * (9 / 12));
     }
-
     .col-tablet-10 {
         width: calc(100% * (10 / 12));
     }
-
     .col-tablet-11 {
         width: calc(100% * (11 / 12));
     }
-
     .col-tablet-12 {
         width: calc(100% * (12 / 12));
     }
-
     .hidden-pc {
         display: block;
     }
@@ -327,11 +320,12 @@ img[lazy='loaded'] {
     }
 }
 
+
 /* 手機尺寸 */
+
 @media only screen and (max-width: 767px) {
     .no-padding-top {
         padding-top: 0;
-
         .fullscreen {
             height: calc(100vh - 63px) !important;
         }
@@ -339,7 +333,6 @@ img[lazy='loaded'] {
     .fullscreen {
         height: calc(100vh - #{$nav_phone_height} - 63px) !important;
         overflow: hidden;
-
         .fullscreen-container {
             width: 100vw;
             min-width: 100vw;
@@ -347,7 +340,6 @@ img[lazy='loaded'] {
             margin: 0 auto;
         }
     }
-
     .home {
         padding-top: $nav_phone_height;
         /*background-color: $order_bg_color;*/
@@ -355,78 +347,65 @@ img[lazy='loaded'] {
         // background-repeat: no-repeat;
         // background-size: cover;
         //background-attachment: fixed;
-     //   background-position: 0% 50%;
-     background:none;
-     &::before{content: "";
-    position: fixed;top: 0;left: 0;
-    bottom: 0;right: 0;
-    background:$bg-m top;
-    background-size: 100% auto;
-    
-    }
-
+        //   background-position: 0% 50%;
+        background: none;
+        &::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: $bg-m top;
+            background-size: 100% auto;
+        }
         &.no-padding-top {
             padding-top: 0;
         }
-
-     //   background-color: #fff;
+        //   background-color: #fff;
     }
-
     .full-bg {
         height: calc(100vh - 63px);
     }
     .full-img {
         height: calc(100vh - 63px);
     }
-
     .col-mobile-1 {
         width: 100%;
     }
-
     .col-mobile-2 {
         width: 50%;
     }
-
     .col-mobile-3 {
         width: 25%;
     }
-
     .col-mobile-4 {
         width: 33.33%;
     }
-
     .col-mobile-5 {
         width: calc(100% * (5 / 12));
     }
-
     .col-mobile-6 {
         width: 50%;
     }
-
     .col-mobile-7 {
         width: calc(100% * (7 / 12));
     }
-
     .col-mobile-8 {
         width: calc(100% * (8 / 12));
     }
-
     .col-mobile-9 {
         width: calc(100% * (9 / 12));
     }
-
     .col-mobile-10 {
         width: calc(100% * (10 / 12));
     }
-
     .col-mobile-11 {
         width: calc(100% * (11 / 12));
     }
-
     .col-mobile-12 {
         width: calc(100% * (12 / 12));
     }
-
     .hidden-pc {
         display: block;
     }
@@ -436,7 +415,6 @@ img[lazy='loaded'] {
     .hidden-mobile {
         display: none !important;
     }
-
     .visible-mobile {
         display: block !important;
     }
