--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -4,23 +4,30 @@ $bg: transparent;
 $bg_m: transparent;
 
 /* font-family */
+
+
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
 
-$family1: "Noto Serif TC", serif;
-$family2: "Noto Serif TC", serif;
-$family3: "Noto Serif TC", serif;
-$family4: "Noto Serif TC", serif,sans-serif;
+$family1: "Noto Serif TC",
+serif;
+$family2: "Noto Serif TC",
+serif;
+$family3: "Noto Serif TC",
+serif;
+$family4: "Noto Serif TC",
+serif,
+sans-serif;
 $selection_color: grey;
 
 /* navigation */
 
 $nav_bg: #fff;
-$nav_btn_color: #EB5C20;
-$nav_link_color: #EB5C20;
-$nav_link_subtitle_color: #EB5C20;
+$nav_btn_color: #eb5c20;
+$nav_link_color: #eb5c20;
+$nav_link_subtitle_color: #eb5c20;
 $nav_link_hover_color: #fff;
-$nav_link_hover_bg: #EB5C20;
-$nav_link_border_bg: #EB5C20;
+$nav_link_hover_bg: #eb5c20;
+$nav_link_border_bg: #eb5c20;
 
 /* loading */
 
@@ -31,9 +38,7 @@ $loading_icon_color: #f7931e #f7931e transparent;
 /* astrictMask */
 
 $mask_bg_color: #fff;
-$mask_bg_image: linear-gradient( to top,
-rgba(0, 0, 0, 0.24),
-rgba(156, 30, 35, 0));
+$mask_bg_image: linear-gradient( to top, rgba(0, 0, 0, 0.24), rgba(156, 30, 35, 0));
 $mask_color: #333;
 $mask_icon_color: #c82514;
 
@@ -41,21 +46,21 @@ $mask_icon_color: #c82514;
 
 // order
 $order_bg_color: #006868;
-$order_bg_image:none;
-$order_bg_image_m: none;
+$order_bg_image: url("~@/projects/renai/order-bg.jpg");
+$order_bg_image_m: url("~@/projects/renai/order-bg-m.jpg");
 $order_title_color: #000;
 $order_subtitle_color: #000;
-$order_input_label_color: #182C80;
-$order_input_color: #182C80 !important;
+$order_input_label_color: #eb5c21;
+$order_input_color: #eb5c21 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #182C80;
-$order_input_focus_border: solid 2px #182C80 !important;
+$order_input_border: solid 1px #eb5c21;
+$order_input_focus_border: solid 2px #eb5c21 !important;
 $order_input_selected_color: solid 1px #fff !important;
-$order_check_desc_color: #000 !important;
-$order_check_span_color: #c00 !important;
-$order_submit_bg: #182C80;
-$order_submit_borderradius: 0px;
+$order_check_desc_color: #eb5c21 !important;
+$order_check_span_color: #eb5c21 !important;
+$order_submit_bg: #eb5c21;
+$order_submit_borderradius: 10px;
 $order_submit_color: #fff !important;
 $order_sumbit_disable_bg: #fff;
 // contactInfo
@@ -65,41 +70,43 @@ $contact_shadow: 0 0 80px 0 rgba(0,
 0,
 0,
 0.2);
-$contact_btn_border: inset 0 0 1px 1px #182C80;
-$contact_btn_color: #182C80;
-$contact_btn_icon: #182C80;
+$contact_btn_border: inset 0 0 0px 0px #182c80;
+$contact_btn_color: #eb5c21;
+$contact_btn_icon: #eb5c21;
 $contact_btn_bg: #fff;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #182C80;
-$contact_btn_border_radius: 0px;
-$contact_btn_addr_border_radius: 10px 0 0 10px;
-$contact_btn_gbtn_border_radius: 0 10px 10px 0;
-$contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
-$contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
-$contact_google_btn_color: #fff;
-$contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #182C80;
+$contact_btn_hover_bg: #eb5c21;
+$contact_btn_hover_border: inset 0 0 1px 1px #fff;
+$contact_btn_border_radius: 10px;
+$contact_btn_addr_bg: #fff;
+$contact_btn_addr_border_radius: 10px 10px 10px 10px;
+$contact_btn_gbtn_border_radius: 10px 10px 10px 10px;
+$contact_btn_addr_border_radius_m: 10px 10px 0 0 !important;
+$contact_btn_gbtn_border_radius_m: 0 0 10px 10px !important;
+$contact_google_btn_color: #eb5c21;
+$contact_google_btn_icon: #eb5c21;
+$contact_google_btn_bg: #fff;
 $contact_google_border: inset 0 0 0px 0px #333;
-$contact_google_hover_btn_color: #333333;
-$contact_google_hover_btn_icon: #333333;
-$contact_google_hover_btn_bg: #182C80;
-$contact_google_hover_border: inset 0 0 0px 0px #fff;
+$contact_google_hover_btn_color: #fff;
+$contact_google_hover_btn_icon: #fff;
+$contact_google_hover_btn_bg: #eb5c21;
+$contact_google_hover_border: inset 0 0 1px 1px #fff;
 // houseInfo
-$house_bg: url("~@/assets/img/order_bg.jpg");
+$house_bg: #eb5c21;
 $house_title_color: #fff;
 $house_border_color: #fff;
 $house_label_color: #fff;
 $house_desc_color: #fff;
 // mobileNav
-$mobile_nav_background: #182C80;
+$mobile_nav_background: #eb5c21;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #182C80;
+$mobile_dialog_icon: #eb5c21;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #182C80;
+$mobile_dialog_submit_bg: #eb5c21;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
