--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -35,19 +35,25 @@ body {
 }
 
 .home {
-    background: $bg;
     padding-top: $nav_pc_height;
     background-attachment: fixed;
     background-size: 100% auto;
-    /*   background-size:100% auto;
-    background-position: top;
-    background-repeat: no-repeat; */
     overflow: hidden; //試底下多的那塊哪來的
     &.no-padding-top {
         padding-top: 0;
         .fullscreen {
             height: 100vh;
         }
+    }
+    &::before{
+        content: "";
+        position: fixed;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: $bg;
     }
 }
 
@@ -341,17 +347,10 @@ img[lazy="loaded"] {
     }
     .home {
         padding-top: $nav_phone_height;
-        /*background-color: $order_bg_color;*/
-        /*background-image: $order_bg_image_m;*/
-        // background-repeat: no-repeat;
-        // background-size: cover;
-        //background-attachment: fixed;
-        //   background-position: 0% 50%;
         background: none;
         &.no-padding-top {
             padding-top: 0;
         }
-        //   background-color: #fff;
     }
     .full-bg {
         height: calc(100vh - 63px);
