--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -38,7 +38,7 @@ $mask_icon_color: #c82514;
 /* contactSection */
 
 // order
-$order_bg_color: #006868;
+$order_bg_color: #faed00;
 $order_bg_image: url("~@/projects/ruo/order_bg.jpg");
 $order_bg_image_m: url("~@/projects/ruo/order_bg_m.jpg");
 $order_title_color: #3f96e2;
