--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -54,7 +54,7 @@ $mask_icon_color: #c82514;
 
 // order
 $order_bg_color: #006868;
-$order_bg_image: url("~@/projects/dh/bg.png");
+$order_bg_image: url("~@/projects/dh/bg.jpg");
 $order_bg_image_m: url("~@/projects/dh/bg_m.jpg");
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
