--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -40,6 +40,7 @@
     top: 50% !important;
     transform: translateY(-50%) !important;
 }
+
 .absolute-c {
     position: absolute;
     margin: 0 auto;
@@ -116,13 +117,11 @@
     margin: 0 auto;
 }
 
-
 .scale-img-dialog {
     width: 100vw;
     position: fixed;
     top: 0;
     z-index: 300;
-
     .mask {
         background: rgba(0, 0, 0, 0.6);
         width: 100%;
@@ -138,9 +137,7 @@
         right: 0;
         margin: 0 auto;
         overflow: auto;
-
-        img {
-        }
+        img {}
     }
     .close {
         right: 10px;
@@ -153,39 +150,37 @@
     }
 }
 
+
 /* 螢幕尺寸標準 */
+
+
 /* 平板尺寸 */
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
     .flex-tablet-jc {
         display: flex;
         justify-content: center;
     }
-
     .flex-tablet-ac {
         display: flex;
         align-items: center;
     }
-
     .flex-tablet-ab {
         display: flex;
         align-items: flex-end;
     }
-
     .flex-tablet-at {
         display: flex;
         align-items: flex-start;
     }
-
     .flex-tablet-jb {
         display: flex;
         justify-content: space-between;
     }
-
     .flex-tablet-ja {
         display: flex;
         justify-content: space-around;
     }
-
     .flex-tablet-jr {
         display: flex;
         justify-content: flex-end;
@@ -197,41 +192,33 @@
         display: flex;
         justify-content: center;
     }
-
     .flex-mobile-ac {
         display: flex;
         align-items: center;
     }
-
     .flex-mobile-ab {
         display: flex;
         align-items: flex-end;
     }
-
     .flex-mobile-at {
         display: flex;
         align-items: flex-start;
     }
-
     .flex-mobile-jb {
         display: flex;
         justify-content: space-between;
     }
-
     .flex-mobile-ja {
         display: flex;
         justify-content: space-around;
     }
-
     .flex-mobile-jr {
         display: flex;
         justify-content: flex-end;
     }
-
     .decor {
         display: none;
     }
-
     .work-c {
         text-align: center !important;
         margin-bottom: 12px;
