--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -50,7 +50,7 @@ $mask_icon_color: #c82514;
 // order
 $order_bg_color: #000;
 $order_bg_image: url("~@/projects/wv/orderbg.png");
-$order_bg_image_m: url("~@/projects/wv/orderbg_m.png");
+$order_bg_image_m: url("~@/projects/wv/orderbg_m.jpg");
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
 $order_input_label_color: #333333;
