--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -48,8 +48,8 @@ $mask_icon_color: #c82514;
 /* contactSection */
 
 // order
-$order_bg_color: #000;
-$order_bg_image: url("~@/projects/wv/orderbg.png");
+$order_bg_color: #160c24;
+$order_bg_image: url("~@/projects/wv/orderbg.jpg");
 $order_bg_image_m: url("~@/projects/wv/orderbg_m.jpg");
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
@@ -61,7 +61,7 @@ $order_input_border: solid 0 #fff;
 $order_input_focus_border: solid 1px #fff !important;
 $order_input_selected_color: solid 1px #fff !important;
 $order_check_desc_color: #fff !important;
-$order_check_span_color: #fff !important;
+$order_check_span_color: #ff0 !important;
 $order_submit_bg: #fff;
 $order_submit_borderradius: 0px;
 $order_submit_color: #000 !important;
