換字體方式

--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -37,6 +37,34 @@ p {
 /* animate css */
 
 /* font */
+
+/* noto-serif-tc-300 - latin_chinese-traditional */
+@font-face {
+    font-family: 'Noto Serif TC';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* noto-serif-tc-500 - latin_chinese-traditional */
+  @font-face {
+    font-family: 'Noto Serif TC';
+    font-style: normal;
+    font-weight: 500;
+    src: local(''),
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* noto-serif-tc-700 - latin_chinese-traditional */
+  @font-face {
+    font-family: 'Noto Serif TC';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('https://h35.banner.tw/fonts/noto-serif-tc-v23-latin_chinese-traditional-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
 /*
 @font-face {
     font-family: DFPingJuStd;
