--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -35,7 +35,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #000;
+    color: #0e79dc;
 }
 
 .home {
