--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -59,33 +59,25 @@ $mask_icon_color: #c82514;
 $order_bg_color: #006868;
 $order_bg_image: url("~@/projects/cfyd/contact-bg.jpg");
 $order_bg_image_m: url("~@/projects/cfyd/contact-bg-m.jpg");
-$order_title_color: #fff;
-$order_subtitle_color: #fff;
-$order_input_label_color: #fff;
+$order_title_color: #595757;
+$order_subtitle_color: #595757;
+$order_input_label_color: #595757;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
 $order_input_border: solid 1px #fff;
 $order_input_focus_border: solid 2px #fff !important;
 $order_input_selected_color: solid 1px #fff !important;
-$order_check_desc_color: #fff !important;
+$order_check_desc_color: #595757 !important;
 $order_check_span_color: #e02200 !important;
-$order_submit_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
+$order_submit_bg: #465185;
 $order_submit_border: 0px solid #b4904f !important;
 $order_submit_borderradius: 0px;
 $order_submit_color: #fff !important;
 $order_sumbit_disable_bg: #fff;
 // contactInfo
-$contact_bg: #b4904f;
-$contact_bg_m: #b4904f;
+$contact_bg: #465185;
+$contact_bg_m: #465185;
 $contact_shadow: 0 0 80px 0 rgba(0,
 0,
 0,
@@ -96,15 +88,7 @@ $contact_btn_icon: #fff;
 $contact_btn_bg: transparent;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
+$contact_btn_hover_bg:  #263061;
 $contact_btn_border_radius: 99px;
 $contact_btn_addr_border_radius: 99px 0 0 99px;
 $contact_btn_gbtn_border_radius: 0 99px 99px 0;
@@ -116,15 +100,7 @@ $contact_google_btn_bg: #000;
 $contact_google_border: inset 0 0 0px 0px #000;
 $contact_google_hover_btn_color: #fff;
 $contact_google_hover_btn_icon: #fff;
-$contact_google_hover_btn_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
+$contact_google_hover_btn_bg: #263061;
 $contact_google_hover_border: inset 0 0 0px 0px #000;
 // houseInfo
 $house_bg: #000;
