--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -47,16 +47,16 @@ $order_bg_image:none;
 $order_bg_image_m: none;
 $order_title_color: #000;
 $order_subtitle_color: #000;
-$order_input_label_color: #182C80;
-$order_input_color: #182C80 !important;
+$order_input_label_color: #E65625;
+$order_input_color: #BF0E44 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #182C80;
-$order_input_focus_border: solid 2px #182C80 !important;
+$order_input_border: solid 1px #E65625;
+$order_input_focus_border: solid 2px #E65625 !important;
 $order_input_selected_color: solid 1px #fff !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #c00 !important;
-$order_submit_bg: #182C80;
+$order_submit_bg: #BF0E44;
 $order_submit_borderradius: 0px;
 $order_submit_color: #fff !important;
 $order_sumbit_disable_bg: #fff;
@@ -67,13 +67,13 @@ $contact_shadow: 0 0 80px 0 rgba(0,
 0,
 0,
 0.2);
-$contact_btn_border: inset 0 0 1px 1px #182C80;
-$contact_btn_color: #182C80;
-$contact_btn_icon: #182C80;
+$contact_btn_border: inset 0 0 1px 1px #E65625;
+$contact_btn_color: #000;
+$contact_btn_icon: #E65625;
 $contact_btn_bg: #fff;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #182C80;
+$contact_btn_hover_bg: #BF0E44;
 $contact_btn_border_radius: 0px;
 $contact_btn_addr_border_radius: 10px 0 0 10px;
 $contact_btn_gbtn_border_radius: 0 10px 10px 0;
@@ -81,11 +81,11 @@ $contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
 $contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #182C80;
+$contact_google_btn_bg: #BF0E44;
 $contact_google_border: inset 0 0 0px 0px #333;
-$contact_google_hover_btn_color: #333333;
-$contact_google_hover_btn_icon: #333333;
-$contact_google_hover_btn_bg: #182C80;
+$contact_google_hover_btn_color: #fff;
+$contact_google_hover_btn_icon: #fff;
+$contact_google_hover_btn_bg: #940b34;
 $contact_google_hover_border: inset 0 0 0px 0px #fff;
 // houseInfo
 $house_bg: url("~@/assets/img/order_bg.jpg");
@@ -94,14 +94,14 @@ $house_border_color: #fff;
 $house_label_color: #fff;
 $house_desc_color: #fff;
 // mobileNav
-$mobile_nav_background: #182C80;
+$mobile_nav_background: #940b34;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #182C80;
+$mobile_dialog_icon: #BF0E44;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #182C80;
+$mobile_dialog_submit_bg: #BF0E44;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
